

Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.

- The GDB `Open Source' dialog has a filter.

- You can easily toggle line numbers via the `Source' menu or the
  `Source' preferences.

- Dragging breakpoints works much better with scrolling.


User Interface
--------------

- Insensitive items have a 3-D `emboss' look, making them more legible.

- `Flat' toolbar buttons keep their border after having been activated.

- Toolbar buttons appear in color when entered.  See the
  `activeButtonColorKey' resource for details.

- The `Insert' key toggles text insertion mode.  Requires Motif 2.0.

- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.

- You can configure the Ctrl+C (`Interrupt' vs. `Copy') and Ctrl+A
  (`Select All' vs. `Beginning of Line') key bindings via Preferences.

- You can configure the tool bar to appear at the bottom of the
  window, as in DDD 2.x and earlier.


Settings
--------

- You can safely run multiple DDD instances at the same time.
  * DDD detects when option files have been changed (e.g. by saving
    options in another DDD instance) and offers reloading option files.
  * Likewise, when saving options, DDD warns against overwriting
    option files that have been changed by another DDD instance.
  * The initial warning about running multiple DDD instances is
    disabled by default.  Use `Edit->Preferences->General->Warn if
    Multiple DDD Instances are Running' to re-enable it.
  See also the `checkOptions' and `warnIfLocked' resources.

- User-defined commands can accept a symbolic argument.  See the `()'